apps/base/grimmory/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grimmory
spec:
  parentRefs:
    - name: main-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - grimmory.lab.mnm-solutions.de
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grimmory
          port: 6060
